# pydeno

./: .gitignore  Cargo.toml  LICENSE  README.md  dodo.py  pydeno.pyi  pyproject.toml  requirements.dev.txt
.github/workflows/: CI.yml
src/: conversion.rs  exception.rs  lib.rs  runtime.rs  value.rs
tests/: test_call_eval_preload.py  test_eval.py  test_value_conversions.py
