[package]
edition = "2021"
name = "pydeno"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "pydeno"

[dependencies]
deno_core = "0.156.0"
pyo3 = {version = "0.17.1", features = ["extension-module"]}
serde_json = "1.0.87"
